# booking-manager

./: .env  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
booking_manager/: .env  Cargo.toml
booking_manager/migrations/2025-07-19-075731_timeslots/: down.sql  up.sql
booking_manager/src/: backend.rs  configuration.rs  configuration_handler.rs  database_interface.rs  http.rs  local_timeslot_manager.rs  local_timeslots.rs  main.rs  testutils.rs  timeslot_manager.rs  types.rs
frontend/: admin_page.html  index.html  script.js  style.css
src/: .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
src/frontend/: index.html
src/src/: configuration.rs  configuration_handler.rs  database_interface.rs  http.rs  local_timeslots.rs  main.rs  schema.rs  testutils.rs
