[package]
name = "booking_manager"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
mockall = "0.11"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20.0"
test-case = "3.3.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }


[dev-dependencies]
hyper = "0.14"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
